# wf-sync

./: .gitignore  .railwayignore  Procfile  backend.py  daemon.py  daemon.spec  daemon_gui.py  daemon_gui_windows.py  daemon_linux.spec  daemon_windows.spec  helper_windows.py  nixpacks.toml  pyproject.toml  test_auth.py
.github/workflows/: build.yml
